# ravana

./: pyproject.toml
docs/: ARCHITECTURE.md  EXAMPLES.md  TASKS.md
examples/workflows/: software-development-team.yaml
src/ravana/: cli.py
src/ravana/compiler/: graph.py  persist.py  validate.py
src/ravana/engine/: dod.py  expr.py  loop.py  state_merge.py
src/ravana/observability/: audit.py  logging.py
src/ravana/runtime/: backoff.py  base.py  gateway.py  git_exec.py  git_handoff.py  git_workspace.py  idempotency.py  mock.py  prompt.py  schema_validate.py  secrets.py  shadow_copy.py  tool_executor.py
src/ravana/runtime/providers/: anthropic_adapter.py  base.py  openai_adapter.py
src/ravana/runtime/toolkits/: api_connector.py  base.py  code_interpreter.py  http_errors.py  mcp_server.py  mcp_snapshot.py  registry.py  sandbox.py  script_stage.py  web_search.py  workspace_scan.py
src/ravana/schema/: db.py  loader.py  models.py  util.py
tests/: conftest.py  test_backoff.py  test_cli_llm_backend.py  test_cli_watch.py  test_code_interpreter.py  test_compiler.py  test_dod.py  test_dod_judge.py  test_e2e_sdlc.py  test_gateway.py  test_git_exec.py  test_git_handoff.py  test_git_workspace.py  test_guards_and_fixes.py  test_idempotency.py  test_join.py  test_mcp_server.py  test_resume.py  test_routing.py  test_schema_validate.py  test_tool_execution.py  test_untrusted_tool_output.py  test_web_search.py
tests/fixtures/: mcp_probe_server.py  sdlc_mock_responses.yaml
