[project]
name = "ravana"
version = "0.1.0"
description = "Domain-agnostic multi-agent orchestration framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "simpleeval>=1.0",
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.scripts]
ravana = "ravana.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ravana"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
