[project]
name = "ravana"
version = "0.1.0"
description = "Domain-agnostic multi-agent orchestration framework"
requires-python = ">=3.11"
# POSIX-only, and has been since before the git slices: `fcntl` is a hard
# top-level import in the code_interpreter toolkit and the workspace modules use
# process groups (`os.killpg`) and `O_NOFOLLOW`/`dir_fd` file operations. Stated
# here rather than guarded per-module, because a guard in one module would imply
# the rest is portable when the package does not even import on Windows.
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "simpleeval>=1.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "mcp>=1.28.1",
    "jsonschema>=4.26.0,<4.27",
    "regex>=2024.11.6",
]

[project.scripts]
ravana = "ravana.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ravana"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "ruff>=0.12",
    "types-jsonschema>=4.26.0.20260518",
    "types-regex>=2024.11.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
# Type-check function bodies even without annotations — the gateway/engine have
# many `async def`s whose bodies carry the real logic; leaving them unchecked
# (mypy's default) would make a green run meaningless here.
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Run via `uv run mypy` so the project's own deps (pydantic, httpx, anthropic,
# openai, click — all shipping their own py.typed) are importable and typed.

# simpleeval ships no type information and has no stub package; treat only that
# import as untyped rather than blanket-silencing every missing import.
[[tool.mypy.overrides]]
module = "simpleeval"
ignore_missing_imports = true
